--- a/main.css
+++ b/main.css
@@ -15,11 +15,34 @@ and open the template in the editor.
 
 body {
     background-color: #FFFFFF;
+    width: 100%;
+}
+
+.headers {
+    background-color: #006699;
+    padding-bottom: 0.5em;
+    height: 10em;
+    width: 100%;
+    text-align: center;
+}
+
+h1 {
+    color: #FFFFFF;
+    text-transform: uppercase;
+    font-size: 3em;
+    margin: 0;
+}
+
+h3 {
+    color: #FFFFFF;
+    font-size: 2em;
+    margin: 0;
 }
 
 #nav {
     display: block;
     float: left;
+    width: 100%;
 }
 
 .navbar {
@@ -32,7 +55,7 @@ body {
 
 .navbar a:link {
     display: block;
-    width: 256px;
+    width: 20%;
     margin: 0px;
     padding-top: 12px;
     padding-bottom: 12px;
@@ -61,27 +84,6 @@ li a:link {
 
 li a:visited {
     color: #006699;
-}
-
-.headers {
-    background-color: #006699;
-    padding-bottom: 0.5em;
-    height: 10em;
-    width: 1280px;
-    text-align: center;
-}
-
-h1 {
-    color: #FFFFFF;
-    text-transform: uppercase;
-    font-size: 3em;
-    margin: 0;
-}
-
-h3 {
-    color: #FFFFFF;
-    font-size: 2em;
-    margin: 0;
 }
 
 .genformat {
