--- a/main.css
+++ b/main.css
@@ -101,8 +101,8 @@ li a:visited {
     margin-top: 3.9em;
     margin-left: 2em;
     box-shadow: rgba(0,0,0,0.2) 5px 5px;
-    height: 300px;
-    width: 300px;
+    height: 30%;
+    width: 30%;
 }
 
 .UWlogo {
@@ -114,6 +114,7 @@ li a:visited {
 #right {
     float: right;
     margin-top: 2.4em;
+    width: 70%;
 }
 
 #leftColumn {
