--- a/main.css
+++ b/main.css
@@ -20,6 +20,7 @@ body {
 
 .headers {
     background-color: #006699;
+    padding-top: 0.5em;
     padding-bottom: 0.5em;
     height: 10em;
     width: 100%;
