--- a/main.css
+++ b/main.css
@@ -61,6 +61,7 @@ h3 {
     margin: 0px;
     padding-top: 13px;
     padding-bottom: 12px;
+    padding-right: 5px;
     font-size: 1.6em;
     font-weight: bold;
     text-transform: uppercase;
