--- a/main.css
+++ b/main.css
@@ -101,7 +101,7 @@ li a:visited {
 .profile {
     margin-top: 3.9em;
     margin-left: 2em;
-    box-shadow: rgba(0,0,0,0.2) 5px 5px;
+    border: 1px solid black;
     height: 25%;
     width: 25%;
 }
