--- a/main.css
+++ b/main.css
@@ -8,14 +8,9 @@ and open the template in the editor.
     Author     : mohamed
 */
 
-* {
-    margin: 0px;
-    padding: 0px;
-}
-
 body {
     background-color: #FFFFFF;
-    width: 100%;
+    width: 1000px;
 }
 
 .headers {
@@ -23,7 +18,7 @@ body {
     padding-top: 0.5em;
     padding-bottom: 0.5em;
     height: 9.9em;
-    width: 100%;
+    width: 1000px;
     text-align: center;
 }
 
@@ -46,26 +41,16 @@ h3 {
     width: 100%;
 }
 
-.navbar {
-    list-style: none;
-    display: block;
-    float: left;
-    text-align: center;
-    background-color: #003366;
-    width: 20%;
-}
-
 .navbar a:link {
     display: block;
-    width: 100%;
+    width: 180px;
     margin: 0px;
-    padding-top: 13px;
-    padding-bottom: 12px;
-    font-size: 1.6em;
+    padding: 10px;
     font-weight: bold;
     text-transform: uppercase;
     text-decoration: none;
     color: #FFFFFF;
+    background-color: #003366;
 }
 
 .navbar a:visited {
@@ -88,14 +73,11 @@ li a:visited {
     color: #006699;
 }
 
-.genformat {
+section {
     display: block;
-    margin-top: 1em;
-    margin-left: 2em;
-    margin-right: 2em;
-    margin-bottom: 1em;
+    width: 920px;
+    padding: 40px;
     color: #000000;
-    font-size: 1.5em;
 }
 
 .profile {
