--- a/main.css
+++ b/main.css
@@ -37,21 +37,22 @@ h3 {
 }
 
 #nav {
-    display: inline;
     float: left;
     width: 100%;
+    background-color: #003366;
 }
 
 .navbar a:link {
     display: inline-block;
-    width: 180px;
+    width: 160px;
     margin: 0px;
     padding: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
     font-weight: bold;
     text-transform: uppercase;
     text-decoration: none;
     color: #FFFFFF;
-    background-color: #003366;
 }
 
 .navbar a:visited {
