--- a/main.css
+++ b/main.css
@@ -95,6 +95,7 @@ section {
 #right {
     float: right;
     width: 75%;
+    margin-top: 80px;
 }
 
 #leftColumn {
@@ -112,7 +113,7 @@ section {
 }
 
 #intro {
-    margin-top: 2.4em;
+    margin-top: 80px;
 }
 
 #centered {
