--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ and open the template in the editor.
 */
 
 body {
-    background-color: #f2f1e9;
+    background-color: #d5f2f2;
     width: 1000px;
     margin: 5% auto 2% auto;
     /*border: 5px solid #003366;*/
