--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ body {
     background-color: #006699;
     padding-top: 20px;
     padding-bottom: 20px;
-    width: 1000px;
+    width: 100%;
     text-align: center;
 }
 
@@ -43,9 +43,9 @@ h3 {
 .navbar a:link {
     display: inline-block;
     float: left;
-    width: 180px;
-    margin: 0px;
-    padding: 10px;
+    width: 18%;
+    margin: 0%;
+    padding: 1%;
     font-weight: bold;
     text-transform: uppercase;
     text-decoration: none;
@@ -74,14 +74,14 @@ li a:visited {
 
 section {
     display: block;
-    width: 920px;
-    padding: 40px;
+    width: 92%;
+    padding: 4%;
     color: #000000;
     background-color: #FFFFFF;
 }
 
 .profile {
-    margin-top: 40px;
+    margin-top: 4%;
     border: 1px solid black;
     height: 20%;
     width: 20%;
@@ -96,7 +96,7 @@ section {
 #right {
     float: right;
     width: 75%;
-    margin-top: 40px;
+    margin-top: 4%;
 }
 
 #leftColumn {
@@ -114,7 +114,7 @@ section {
 }
 
 #intro {
-    margin-top: 40px;
+    margin-top: 4%;
 }
 
 #centered {
