--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ and open the template in the editor.
 
 body {
     background-color: #b6d4e4;
-    width: 1000px;
+    width: 90%;
     margin: 2% auto 0.5% auto;
     /*border: 5px solid #003366;*/
 }
