--- a/main.css
+++ b/main.css
@@ -10,15 +10,15 @@ and open the template in the editor.
 
 body {
     background-color: #b6d4e4;
-    width: 90%;
+    width: 100%;
     margin: 0% auto 0% auto;
     /*border: 5px solid #003366;*/
 }
 
 .headers {
     background-color: #006699;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 2%;
+    padding-bottom: 2%;
     width: 100%;
     text-align: center;
 }
