--- a/main.css
+++ b/main.css
@@ -27,11 +27,13 @@ h1 {
     color: #FFFFFF;
     text-transform: uppercase;
     margin: 0;
+    font-size: 3%;
 }
 
 h3 {
     color: #FFFFFF;
     margin: 0;
+    font-size: 2%;
 }
 
 #nav {
@@ -47,6 +49,7 @@ h3 {
     margin: 0%;
     padding: 1%;
     font-weight: bold;
+    font-size: 1.5%;
     text-transform: uppercase;
     text-decoration: none;
     color: #FFFFFF;
@@ -78,6 +81,7 @@ section {
     padding: 4%;
     color: #000000;
     background-color: #FFFFFF;
+    font-size: 1%;
 }
 
 .profile {
