--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ li a:visited {
 section {
     display: block;
     width: 92%;
-    padding: 20px;
+    padding: 2%;
     color: #000000;
     background-color: #FFFFFF;
     font-size: 13px;
