--- a/main.css
+++ b/main.css
@@ -67,14 +67,6 @@ h3 {
     color: #000033;
 }
 
-li a:link {
-    color: #006699;
-}
-
-li a:visited {
-    color: #006699;
-}
-
 section {
     display: block;
     width: 92%;
@@ -85,7 +77,7 @@ section {
 }
 
 .profile {
-    margin-top: 20px;
+    margin-top: 2%;
     border: 1px solid black;
     height: 20%;
     width: 20%;
