--- a/main.css
+++ b/main.css
@@ -78,9 +78,12 @@ section {
 
 .profile {
     margin-top: 2%;
+    margin-left: auto;
+    margin-right: auto;
     border: 1px solid black;
-    height: 20%;
-    width: 20%;
+    height: 200px;
+    width: 200px;
+    clear: both;
 }
 
 .UWlogo {
