--- a/main.css
+++ b/main.css
@@ -94,8 +94,9 @@ section {
 
 #right {
     float: right;
-    width: 100%;
+    width: 70%;
     margin-top: 2%;
+    margin-right: 30%;
 }
 
 .leftColumn {
