--- a/main.css
+++ b/main.css
@@ -81,8 +81,8 @@ section {
     margin-left: auto;
     margin-right: auto;
     border: 1px solid black;
-    height: 300px;
-    width: 300px;
+    height: 250px;
+    width: 250px;
     clear: both;
 }
 
@@ -93,7 +93,7 @@ section {
 }
 
 #right {
-    float: right;
+    float: left;
     width: 60%;
     margin-top: 2%;
     margin-left: 2% auto;
