--- a/main.css
+++ b/main.css
@@ -93,10 +93,10 @@ section {
 
 #right {
     float: left;
-    width: 60%;
+    width: 100%;
     margin-top: 2%;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 5% auto;
+    margin-right: 5% auto;
 }
 
 .leftColumn {
