--- a/main.css
+++ b/main.css
@@ -78,8 +78,8 @@ section {
 
 .profile {
     margin-top: 2%;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 5% auto;
+    margin-right: 5% auto;
     border: 1px solid black;
     height: 250px;
     width: 250px;
