--- a/main.css
+++ b/main.css
@@ -77,6 +77,7 @@ section {
 }
 
 .profile {
+    display: block;
     margin-top: 2%;
     margin-left: 5% auto;
     margin-right: 5% auto;
@@ -93,7 +94,7 @@ section {
 
 #right {
     float: left;
-    width: 80%;
+    width: 70%;
     margin-top: 2%;
     margin-left: 5% auto;
     margin-right: 5% auto;
