--- a/main.css
+++ b/main.css
@@ -76,6 +76,15 @@ section {
     font-size: 18px;
 }
 
+section #right {
+    display: block;
+    width: 92%;
+    padding: 4%;
+    color: #000000;
+    background-color: #FFFFFF;
+    font-size: 18px;
+}
+
 .profile {
     margin-top: 2%;
     border: 1px solid black;
