--- a/main.css
+++ b/main.css
@@ -9,10 +9,9 @@ and open the template in the editor.
 */
 
 body {
-    background-color: #b6d4e4;
+    background-color: #FFFFFF;
     width: 100%;
     margin: 0% auto 0% auto;
-    /*border: 5px solid #003366;*/
 }
 
 .headers {
