--- a/sticky-footer-navbar.css
+++ b/sticky-footer-navbar.css
@@ -117,6 +117,14 @@ p {
   margin-left: auto;
 }
 
+.nerf-pic {
+  max-width: 100%;
+  border: 1px solid black;
+  border-radius: 100px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .text {
   font-size: 18px;
 }
