Changed home page
Changed background and colour scheme of home page

--- a/sticky-footer-navbar.css
+++ b/sticky-footer-navbar.css
@@ -34,11 +34,10 @@ body > .container {
 
 body.home {
   min-height: 400px;
-  background-image: url("Backgrounds/view2.jpg");
+  background-image: url("Backgrounds/texture.jpg");
   background-size: cover;
   background-position: center bottom;
   background-attachment: fixed;
-  color: #fff;
 }
 
 .container .text-muted {
@@ -88,11 +87,6 @@ a {
 section.home-section {
   background-color: rgba(0, 0, 0, 0.2);
   padding: 5px;
-}
-
-h1 {
-  color: black;
-  display: inline;
 }
 
 p {
@@ -209,6 +203,7 @@ p.home-lead {
   font-size: 21px;
   font-weight: bold;
   color: #FEE06C;
+  text-decoration: underline;
 }
 
 p.lead {
