Added icons in navbar and for projects
Added icons in navbar and for projects. Projects receiving awards have
a trophy icon.

--- a/sticky-footer-navbar.css
+++ b/sticky-footer-navbar.css
@@ -102,16 +102,12 @@ div.container h1.pageTitle {
   vertical-align: middle;
 }
 
-.fa-envelope {
+.fa-wrench, .fa-user, .fa-code, .fa-envelope, .fa-linkedin-square, .fa-github {
   color: #3BA8FF;
 }
 
-.fa-linkedin-square {
-  color: #3BA8FF;
-}
-
-.fa-github {
-  color: #3BA8FF;
+.fa-trophy {
+  color: purple;
 }
 
 .profile-pic {
