--- a/sticky-footer-navbar.css
+++ b/sticky-footer-navbar.css
@@ -114,6 +114,7 @@ nav.navbar div.navbar-header button {
   padding: 0px;
   padding-left: 5px;
   padding-right: 5px;
+  background-color: rgb(51, 51, 51);
 }
 
 div.navbar-header i {
