--- a/vertical-timeline/css/style.css
+++ b/vertical-timeline/css/style.css
@@ -107,7 +107,7 @@ header h1 {
 
 .cd-timeline-block {
   position: relative;
-  margin: 0;
+  margin: 2em 0;
 }
 .cd-timeline-block:after {
   content: "";
