--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@ body {
   /* Set the fixed height of the footer here */
   height: 40px;
   background-color: #222; /*#f5f5f5;*/
+  /* For Bootstrap Carousel */
+  z-index: 15;
 }
 
 
@@ -55,6 +57,11 @@ code {
 
 a {
   color: #E07A4C;
+}
+
+nav.navbar li a {
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .navbar-custom {
@@ -173,6 +180,13 @@ div.navbar-header i {
   margin-bottom: 10px;
 }
 
+.signup-pic {
+  max-width: 100%;
+  max-height: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .study-pic {
   max-width: 100%;
   border: 1px solid black;
@@ -275,3 +289,17 @@ p.contact-lead {
   color: #00A882;
 }
 
+
+/* For Bootstrap Carousel */
+.carousel {
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+.carousel-indicators li {
+  border-color: black;
+}
+
+.carousel-indicators .active {
+  background-color: #DEB887;
+}
