--- a/styles.css
+++ b/styles.css
@@ -204,9 +204,9 @@ div.navbar-header i {
   margin-bottom: 10px;
 }
 
-.signup-pic {
+.carousel-pic {
   max-width: 100%;
-  max-height: 70%;
+  max-height: 80%;
   margin-left: auto;
   margin-right: auto;
 }
